# GarmentAnalysis_VLLM

./: README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/agent_tracing/: __init__.py  tracer.py
app/api/: application.py
app/api/routers/: garments.py  health.py  pages.py
app/data_models/: full_text_search.py  request_models.py  response_models.py
app/guardrails/: search_guardrails.py  upload_guardrails.py
app/llm_clients/: base.py  mock_client.py  openai_client.py
app/prompts/: fashion_classifier.py  search_interpreter.py
app/repositories/: database.py  garment_repository.py
app/services/: annotation_service.py  classification_service.py  sample_data_service.py  search_service.py
app/static/: app.js  styles.css
app/templates/: index.html
app/token_calculation/: __init__.py  token_calculator.py
app/utils/: config.py  file_store.py  helpers.py
data/: fashion.db  traces.jsonl
eval/: download_pexels_images.py
fashion_inspiration_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/unit/: test_output_parser.py  test_search_guardrails.py
